--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -246,6 +246,21 @@
   <data name="Dialog_Processing_Title" xml:space="preserve">
     <value>Processing</value>
   </data>
+  <data name="Home_Easy_Detail1" xml:space="preserve">
+    <value>Drag and drop files and easily convert to PDF.</value>
+  </data>
+  <data name="Home_Easy_Detail2" xml:space="preserve">
+    <value>It is not possible to make detailed settings.</value>
+  </data>
+  <data name="Home_Standard_Detail1" xml:space="preserve">
+    <value>Set input and output patterns, convert and combine to PDF.</value>
+  </data>
+  <data name="Home_Standard_Detail2" xml:space="preserve">
+    <value>Some settings use regular expressions.</value>
+  </data>
+  <data name="Home_Standard_Detail3" xml:space="preserve">
+    <value>The settings can be saved in a file.</value>
+  </data>
   <data name="MenuFile" xml:space="preserve">
     <value>File(_F)</value>
   </data>
