Add tabs in EasyMode.xaml

--- a/src/MakePdf.Wpf/Properties/Resources.ja.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.ja.resx
@@ -258,6 +258,12 @@
   <data name="Home_Standard_Detail3" xml:space="preserve">
     <value>設定した内容はファイルに保存することができます。</value>
   </data>
+  <data name="Item_InputOutput" xml:space="preserve">
+    <value>入力 / 出力</value>
+  </data>
+  <data name="Item_Option" xml:space="preserve">
+    <value>オプション</value>
+  </data>
   <data name="MenuFile" xml:space="preserve">
     <value>ファイル(_F)</value>
   </data>
