--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -432,4 +432,10 @@
   <data name="MsgBox_NotFound_Title" xml:space="preserve">
     <value>Not found</value>
   </data>
+  <data name="Dialog_DropSettingFile_Message" xml:space="preserve">
+    <value>Do you want to load the new setting file?</value>
+  </data>
+  <data name="Dialog_DropSettingFile_Title" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
 </root>
