--- a/src/MakePdf.Wpf/Properties/Resources.ja.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.ja.resx
@@ -438,4 +438,7 @@
   <data name="Dialog_DropSettingFile_Title" xml:space="preserve">
     <value>確認</value>
   </data>
+  <data name="MenuFile_OpenLogFolder" xml:space="preserve">
+    <value>ログフォルダを開く</value>
+  </data>
 </root>
