--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -438,4 +438,7 @@
   <data name="Dialog_DropSettingFile_Title" xml:space="preserve">
     <value>Confirm</value>
   </data>
+  <data name="MenuFile_OpenLogFolder" xml:space="preserve">
+    <value>Open log folder</value>
+  </data>
 </root>
