--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -441,4 +441,7 @@
   <data name="MenuFile_OpenLogFolder" xml:space="preserve">
     <value>Open log folder</value>
   </data>
+  <data name="MenuFile_RecentFiles" xml:space="preserve">
+    <value>Recent Files</value>
+  </data>
 </root>
