--- a/src/MakePdf.Wpf/Properties/Resources.ja.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.ja.resx
@@ -444,4 +444,7 @@
   <data name="MenuFile_RecentFiles" xml:space="preserve">
     <value>最近使ったファイル</value>
   </data>
+  <data name="Item_Word_CreateBookmarks_None" xml:space="preserve">
+    <value>なし</value>
+  </data>
 </root>
