--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -414,6 +414,9 @@
   <data name="Item_Word_CreateBookmarks_FromHeading" xml:space="preserve">
     <value>from word heading</value>
   </data>
+  <data name="Item_Word_CreateBookmarks_None" xml:space="preserve">
+    <value>None</value>
+  </data>
   <data name="MsgBox_CheckForUpdates_Message" xml:space="preserve">
     <value>Please wait for a while.</value>
   </data>
