--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -240,7 +240,7 @@
   <data name="Dialog_NewVersionFound_Update" xml:space="preserve">
     <value>Update</value>
   </data>
-  <data name="Dialog_Processing_Message" xml:space="preserve">
+  <data name="Dialog_Processing_Started" xml:space="preserve">
     <value>Please wait for a while.</value>
   </data>
   <data name="Dialog_Processing_Title" xml:space="preserve">
@@ -446,5 +446,8 @@
   </data>
   <data name="MenuFile_RecentFiles" xml:space="preserve">
     <value>Recent Files</value>
+  </data>
+  <data name="Dialog_Processing_Completed" xml:space="preserve">
+    <value>Completed.</value>
   </data>
 </root>
