--- a/src/MakePdf.Wpf/Properties/Resources.resx
+++ b/src/MakePdf.Wpf/Properties/Resources.resx
@@ -450,4 +450,13 @@
   <data name="Dialog_Processing_Completed" xml:space="preserve">
     <value>Completed.</value>
   </data>
+  <data name="Dialog_ProcessExists_Excel" xml:space="preserve">
+    <value>Please exit Excel before starting</value>
+  </data>
+  <data name="Dialog_ProcessExists_Title" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="Dialog_ProcessExists_Word" xml:space="preserve">
+    <value>Please exit Word before starting</value>
+  </data>
 </root>
